--- a/html/css/video.css
+++ b/html/css/video.css
@@ -49,7 +49,7 @@ div#infopanel {
 	-webkit-border-radius: 5px;
 	background-color: rgba(0, 0, 0, .8);
 	margin: 20px;
-	width: 360px;
+	width: 300px;
 	float: right;
 }
 
@@ -81,6 +81,15 @@ div#comments-container {
 	margin-bottom: 20px;
 	padding: 10px;
 	width: 500px;
+}
+
+div#comments-preload {
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	background-color: rgba(202, 202, 202, .8);
+	width: 100%;
+	margin-bottom: 10px;
+	padding: 5px;
 }
 
 div#comments {
